fixed view on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ body {
   padding: 0; /* Reset default padding */
   overflow-x: hidden; /* Prevent horizontal scrollbar */
   overflow: hidden;
-  height: 100vh;
+  
 }
 
 @media print {
